# AR-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml  setup_env.sh
AGENT_DOC/: BACKEND.md  FRONTEND.md  TESTING.md
backend/: Dockerfile  cli.py  main.py  prompts.yaml
backend/api/: run_controller.py
backend/core/kaeri_ar_agent/: llm_stream.py  pipeline.py  schemas.py  state.py
backend/core/kaeri_ar_agent/agents/: composer.py  outliner.py  planner.py  qa.py  retriever.py  (+1 more)
backend/domain/: run_record.py
backend/domain/kaeri_ar_agent/: __init__.py  config.py  gates.py  pipeline.py  prompting.py  prompts.py  schemas.py  state.py
backend/schemas/: run.py
backend/services/: run_pipeline.py  run_service.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.svelte
reference/: KAERI_기술현황분석보고서_원자력_AI_시뮬레이션.docx  실행 로그  요청 사항
tests/integration/domain/: test_pipeline_integration.py
tests/integration/services/: test_run_pipeline_task_integration.py
tests/unit/domain/: test_arxiv_client.py  test_auditor.py  test_composer_references.py  test_config.py  test_consensus_gate.py  test_extractor_canonical.py  test_gate_g2.py  test_llm_stream.py  test_outliner.py  test_pipeline_helpers.py  test_pipeline_nodes.py  test_planner.py  test_prompting.py  test_prompts.py  test_providers.py  test_qa.py  test_refiner.py  test_resolver.py  test_retriever.py  test_schemas.py  test_status_checker.py  test_writer.py
tests/unit/services/: test_run_pipeline_service.py  test_run_service.py
(+22 files in other folders)
