[project]
name = "kaeri-ar-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.110",
    "feedparser>=6.0.12",
    "httpx>=0.26",
    "langchain>=0.2.5",
    "langchain-openai>=0.1.7",
    "langgraph>=0.2.0",
    "lxml>=6.0.2",
    "openai>=1.30.0",
    "pydantic>=2.6",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.1",
    "tiktoken>=0.12.0",
    "typing-extensions>=4.10",
    "uvicorn>=0.30.0",
]
